    sh script. (Chris Nauroth via suresh)

    HADOOP-8911. CRLF characters in source and text files.
    (Raja Aluri via suresh)

    HADOOP-8912. Add .gitattributes file to prevent CRLF and LF mismatches
    for source and text files. (Raja Aluri via suresh)

    HADOOP-8784. Improve IPC.Client's token use (daryn)

    HADOOP-8929. Add toString, other improvements for SampleQuantiles (todd)

  OPTIMIZATIONS

    HADOOP-8866. SampleQuantiles#query is O(N^2) instead of O(N). (Andrew Wang
    via atm)

  BUG FIXES

    HADOOP-8795. BASH tab completion doesn't look in PATH, assumes path to
    executable is specified. (Sean Mackrory via atm)

    HADOOP-8780. Update DeprecatedProperties apt file. (Ahmed Radwan via
    tomwhite)

    HADOOP-8833. fs -text should make sure to call inputstream.seek(0)
    before using input stream. (tomwhite and harsh)

    HADOOP-8791. Fix rm command documentation to indicte it deletes
    files and not directories. (Jing Zhao via suresh)

    HADOOP-8855. SSL-based image transfer does not work when Kerberos
    is disabled. (todd via eli)

    HADOOP-8616. ViewFS configuration requires a trailing slash. (Sandy Ryza
    via atm)

    HADOOP-8756. Fix SEGV when libsnappy is in java.library.path but
    not LD_LIBRARY_PATH. (Colin Patrick McCabe via eli)

    HADOOP-8881. FileBasedKeyStoresFactory initialization logging should be debug not info. (tucu)

    HADOOP-8901. GZip and Snappy support may not work without unversioned
    libraries (Colin Patrick McCabe via todd)

    HADOOP-8883. Anonymous fallback in KerberosAuthenticator is broken. (rkanter via tucu)

Release 2.0.2-alpha - 2012-09-07 

  INCOMPATIBLE CHANGES

    HADOOP-8388. Remove unused BlockLocation serialization.
    (Colin Patrick McCabe via eli)

    HADOOP-8689. Make trash a server side configuration option. (eli)

    HADOOP-8710. Remove ability for users to easily run the trash emptire. (eli)
    